# 2d_ik_solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
src/: CMakeLists.txt  bone.cpp  bone.h  chain.cpp  chain.h  main.cpp  window.cpp  window.h
